--- a/assignments-labs/c1_assignment.html
+++ b/assignments-labs/c1_assignment.html
@@ -154,7 +154,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <ul>
 <li><a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/agendas/c1_agenda">Class 1 Agenda</a></li>
 <li><a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/assignments-labs/c1_lab">Class 1 lab</a></li>
-<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/075b87b99e684032288e31e38c4026ce523d6a78/scripts/c1_lab1-script.R">Class 1 lab script</a></li>
+<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c1_lab1-script.R">Class 1 lab script</a></li>
+<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c1_assignment1-script.R">Class 1 Assignment script</a></li>
 <li><a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/lecture-slides/lecture.1/index.html">Class 1 Lecture Slides</a></li>
 </ul>
 </section>
