load revised c2 assignment

--- a/assignments-labs/c2_assignment.html
+++ b/assignments-labs/c2_assignment.html
@@ -169,7 +169,16 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul>
 <p>We will utilize the previous title throughout the course. For this week, focus only on the following definitions listed alphabetically both here and in the book:</p>
 <ul>
-<li>x</li>
+<li>administrative data</li>
+<li>cleanliness</li>
+<li>consent</li>
+<li>cooked data</li>
+<li>data politics</li>
+<li>data subject</li>
+<li>exploratory data analysis (EDA)</li>
+<li>lineage</li>
+<li>nominal data</li>
+<li>pre-analytics</li>
 </ul>
 <p>At 7am Friday, September 12th, the second weekly quiz will open in Canvas. Utilize the posted <a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/agendas/c2_agenda">Class 3 Agenda</a> to gain the quiz access code which will be posted towards the beginning of the agenda. Expect 10 questions in total that cover the concept definitions listed above.</p>
 <p>In addition to the quizzed reading material, review following three short articles. Each details very recent and real issues surrounding data collection - who controls that process and why data collection has become ‘controversial’.</p>
@@ -308,6 +317,8 @@ Warning
 <li>What do you think are the benefits or the deficiencies of the dataset format that is available to the public, i.e.&nbsp;the dataset we are working with?</li>
 </ul>
 <p>The assignment 2 submission is due to Canvas on Thursday, September 11th, 2025 at 11:59pm. The format is either a <code>.html</code> or <code>.pdf</code> document. The pdf output is preferred; the <code>.html</code> output only if you are unable to get latex up and working on your machine. You will not be penalized for an <code>.html</code> format whatsoever - both will be accepted.</p>
+<p>Note that when you knit your output, the <code>.Rmd</code> should not be removed. However, the only submission document for this week’s assignment is either the <code>.pdf</code> or the <code>.html</code>.</p>
+<p>The Assignment 2 R Markdown deliverable is due to Canvas on Thursday, September 11th, 2025 at 11:59pm.</p>
 <section id="references" class="level4">
 <h4 class="anchored" data-anchor-id="references">References:</h4>
 <ul>
