revise invite link

--- a/materials/course.introduction_fall25_Methods_1-PGUD5160.html
+++ b/materials/course.introduction_fall25_Methods_1-PGUD5160.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="dcterms.date" content="2025-08-04">
+<meta name="dcterms.date" content="2025-08-25">
 
 <title>Urban Ecologies Methods 1: Course Introduction</title>
 <style>
@@ -73,7 +73,7 @@ ul.task-list li input[type="checkbox"] {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">August 4, 2025</p>
+      <p class="date">August 25, 2025</p>
     </div>
   </div>
   
@@ -145,7 +145,7 @@ Tip
 <ul>
 <li><a href="https://urbanecologie-smw3281.slack.com">Urban Ecologies Methods 1 - PGUD5160 - Fall2025</a></li>
 </ul>
-<p>There is also a direct invite link to the Slack workspace (please do not share with others outside the course) - <a href="https://join.slack.com/t/urbanecologie-smw3281/shared_invite/zt-3a2in0tfq-0~jTW15wR9VpSPjhWeIkjQ">INVITE</a></p>
+<p>There is also a direct invite link to the Slack workspace (please do not share with others outside the course) - <a href="https://join.slack.com/t/urbanecologie-smw3281/shared_invite/zt-3c11cinhi-M8lSWpT~gbHVRUgUsJgkbw">INVITE</a></p>
 <div class="callout-tip callout callout-style-default callout-captioned">
 <div class="callout-header d-flex align-content-center">
 <div class="callout-icon-container">
