--- a/assignments-labs/c2_assignment.html
+++ b/assignments-labs/c2_assignment.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="dcterms.date" content="2025-09-02">
+<meta name="dcterms.date" content="2025-09-03">
 
 <title>Class 2 Assignment: Exploratory Data Analysis with NYC Arrest Data, Jan-June 2025</title>
 <style>
@@ -138,7 +138,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">September 2, 2025</p>
+      <p class="date">September 3, 2025</p>
     </div>
   </div>
   
@@ -323,7 +323,7 @@ Warning
 <h4 class="anchored" data-anchor-id="references">References:</h4>
 <ul>
 <li><a href="https://r4ds.had.co.nz/r-markdown.html">R for Data Science - Markdown and Rmd Guide</a></li>
-<li><a href="https://bookdown.org/yihui/rmarkdown-cookbook/install-latex.html">R Markdown Cookboos - install latex (tinytex)</a></li>
+<li><a href="https://bookdown.org/yihui/rmarkdown-cookbook/install-latex.html">R Markdown Cookbook - install latex (tinytex)</a></li>
 </ul>
 </section>
 </section>
