c2 lab update images

--- a/assignments-labs/c2_lab.html
+++ b/assignments-labs/c2_lab.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="dcterms.date" content="2025-09-02">
+<meta name="dcterms.date" content="2025-09-04">
 
 <title>Class 2 Lab: Fundamentals of Project Management + EDA in R</title>
 <style>
@@ -135,7 +135,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">September 2, 2025</p>
+      <p class="date">September 4, 2025</p>
     </div>
   </div>
   
@@ -323,7 +323,7 @@ Tip
 <p>This reports back that we have 143,494 observations with 19 variables each, and the variables all match what is in the data dictionary for the dataset. Our job now is to determine what each of these variables means contextually before proceeding to more advanced EDA.</p>
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><img src="c2_lab_files/img/eda-1.png" class="img-fluid figure-img"></p>
+<p><img src="c2_lab_files/img/eda-1a.png" class="img-fluid figure-img"></p>
 <p></p><figcaption class="figure-caption"><em>Structure of the Arrest Data</em></figcaption><p></p>
 </figure>
 </div>
