--- a/assignments-labs/c2_lab.html
+++ b/assignments-labs/c2_lab.html
@@ -323,7 +323,7 @@ Tip
 <p>This reports back that we have 143,494 observations with 19 variables each, and the variables all match what is in the data dictionary for the dataset. Our job now is to determine what each of these variables means contextually before proceeding to more advanced EDA.</p>
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><img src="c2_lab_files/img/eda-1a.png" class="img-fluid figure-img"></p>
+<p><img src="c2_lab_files/img/eda-1a.jpg" class="img-fluid figure-img"></p>
 <p></p><figcaption class="figure-caption"><em>Structure of Arrest Data</em></figcaption><p></p>
 </figure>
 </div>
@@ -337,7 +337,7 @@ Tip
 <p>In our return, we see that indeed <code>TRUE</code> there exists missing values, and then with the second function, we can determine exactly which observations are at issue:</p>
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><img src="c2_lab_files/img/eda-2.png" class="img-fluid figure-img"></p>
+<p><img src="c2_lab_files/img/eda-2.jpg" class="img-fluid figure-img"></p>
 <p></p><figcaption class="figure-caption"><em>Missing Values returned + highlighted</em></figcaption><p></p>
 </figure>
 </div>
@@ -366,7 +366,7 @@ Tip
 <p>The result should now show the <code>Date</code> format correctly:</p>
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><img src="c2_lab_files/img/eda-3.png" class="img-fluid figure-img"></p>
+<p><img src="c2_lab_files/img/eda-3.jpg" class="img-fluid figure-img"></p>
 <p></p><figcaption class="figure-caption"><em>Corrected Date variable format</em></figcaption><p></p>
 </figure>
 </div>
@@ -384,7 +384,7 @@ Tip
 <p>The results should show that we now have both our date issue resolved as well as our factor issue.</p>
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><img src="c2_lab_files/img/eda-4.png" class="img-fluid figure-img"></p>
+<p><img src="c2_lab_files/img/eda-4.jpg" class="img-fluid figure-img"></p>
 <p></p><figcaption class="figure-caption"><em>Corrected Character &gt; Factor Variables</em></figcaption><p></p>
 </figure>
 </div>
