--- a/assignments-labs/c2_lab.html
+++ b/assignments-labs/c2_lab.html
@@ -595,7 +595,7 @@ Note
 <li><a href="https://intro2r.com/graphics_base_r.html">intro2r - base R graphics</a></li>
 <li><a href="https://rstudio.github.io/cheatsheets/base-r.pdf">Base R - Cheatsheet</a></li>
 <li><a href="https://data.cityofnewyork.us/Public-Safety/NYPD-Arrest-Data-Year-to-Date-/uip8-fykc/about_data">NYC Arrest Data Year-to-Date</a></li>
-<li><a href="https://data.cityofnewyork.us/Public-Safety/NYPD-Arrests-Data-Historic-/8h9b-rp9u/about_data">NYC Arrest Data - Historical</a></li>
+<li><a href="https://data.cityofnewyork.us/Public-Safety/NYPD-Arrests-Data-Historic-/8h9b-rp9u/about_data">NYC Arrest Data - Historical + About</a></li>
 </ul>
 </section>
 
