revise c3 agenda lab script address + load c4 agenda

--- a/agendas/c4_agenda.html
+++ b/agendas/c4_agenda.html
@@ -8,7 +8,7 @@
 
 <meta name="dcterms.date" content="2025-09-15">
 
-<title>Week 3 | Class 3 Agenda</title>
+<title>Week 4 | Class 4 Agenda</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -24,16 +24,16 @@ ul.task-list li input[type="checkbox"] {
 </style>
 
 
-<script src="c3_agenda_files/libs/clipboard/clipboard.min.js"></script>
-<script src="c3_agenda_files/libs/quarto-html/quarto.js"></script>
-<script src="c3_agenda_files/libs/quarto-html/popper.min.js"></script>
-<script src="c3_agenda_files/libs/quarto-html/tippy.umd.min.js"></script>
-<script src="c3_agenda_files/libs/quarto-html/anchor.min.js"></script>
-<link href="c3_agenda_files/libs/quarto-html/tippy.css" rel="stylesheet">
-<link href="c3_agenda_files/libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
-<script src="c3_agenda_files/libs/bootstrap/bootstrap.min.js"></script>
-<link href="c3_agenda_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="c3_agenda_files/libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
+<script src="c4_agenda_files/libs/clipboard/clipboard.min.js"></script>
+<script src="c4_agenda_files/libs/quarto-html/quarto.js"></script>
+<script src="c4_agenda_files/libs/quarto-html/popper.min.js"></script>
+<script src="c4_agenda_files/libs/quarto-html/tippy.umd.min.js"></script>
+<script src="c4_agenda_files/libs/quarto-html/anchor.min.js"></script>
+<link href="c4_agenda_files/libs/quarto-html/tippy.css" rel="stylesheet">
+<link href="c4_agenda_files/libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
+<script src="c4_agenda_files/libs/bootstrap/bootstrap.min.js"></script>
+<link href="c4_agenda_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
+<link href="c4_agenda_files/libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
 <style>html{ scroll-behavior: smooth; }</style>
 
 
@@ -50,7 +50,7 @@ ul.task-list li input[type="checkbox"] {
   <ul>
   <li><a href="#fall-2025" id="toc-fall-2025" class="nav-link active" data-scroll-target="#fall-2025">Fall 2025</a></li>
   <li><a href="#faculty-instructor" id="toc-faculty-instructor" class="nav-link" data-scroll-target="#faculty-instructor">Faculty Instructor</a></li>
-  <li><a href="#quiz-2---exploratory-data-analysis-eda" id="toc-quiz-2---exploratory-data-analysis-eda" class="nav-link" data-scroll-target="#quiz-2---exploratory-data-analysis-eda">Quiz 2 - Exploratory Data Analysis (EDA)</a></li>
+  <li><a href="#quiz-3---us-decennial-census" id="toc-quiz-3---us-decennial-census" class="nav-link" data-scroll-target="#quiz-3---us-decennial-census">Quiz 3 - US Decennial Census</a></li>
   <li><a href="#agenda-items" id="toc-agenda-items" class="nav-link" data-scroll-target="#agenda-items">Agenda Items</a>
   <ul class="collapse">
   <li><a href="#pm" id="toc-pm" class="nav-link" data-scroll-target="#pm">12:10 - 12:30 pm</a></li>
@@ -58,8 +58,8 @@ ul.task-list li input[type="checkbox"] {
   <li><a href="#pm-2" id="toc-pm-2" class="nav-link" data-scroll-target="#pm-2">2:15 - 2:40 pm</a></li>
   <li><a href="#pm-3" id="toc-pm-3" class="nav-link" data-scroll-target="#pm-3">2:40 - 2:50 pm</a></li>
   </ul></li>
-  <li><a href="#week-2-class-2-task-list" id="toc-week-2-class-2-task-list" class="nav-link" data-scroll-target="#week-2-class-2-task-list">Week 2 Class 2 Task List</a></li>
-  <li><a href="#week-3-class-3-orientation-items" id="toc-week-3-class-3-orientation-items" class="nav-link" data-scroll-target="#week-3-class-3-orientation-items">Week 3 Class 3 Orientation Items</a></li>
+  <li><a href="#week-4-class-4-task-list" id="toc-week-4-class-4-task-list" class="nav-link" data-scroll-target="#week-4-class-4-task-list">Week 4 Class 4 Task List</a></li>
+  <li><a href="#week-4-class-4-orientation-items" id="toc-week-4-class-4-orientation-items" class="nav-link" data-scroll-target="#week-4-class-4-orientation-items">Week 4 Class 4 Orientation Items</a></li>
   </ul>
 </nav>
 </div>
@@ -67,7 +67,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Week 3 | Class 3 Agenda</h1>
+<h1 class="title">Week 4 | Class 4 Agenda</h1>
 <p class="subtitle lead">Fall 2025 | Instructor: Stephen Metts | <a href="https://courses.newschool.edu/courses/PGUD5160/">PGUD 5160 - CRN 2247</a></p>
 </div>
 
@@ -93,11 +93,11 @@ ul.task-list li input[type="checkbox"] {
 <h2 class="anchored" data-anchor-id="fall-2025">Fall 2025</h2>
 <p><a href="https://courses.newschool.edu/courses/PGUD5160/">Urban Ecologies Methods 1 | Fall Semester 2025</a></p>
 <ul>
-<li><p>Week 3 | Class 3:</p>
+<li><p>Week 4 | Class 4:</p>
 <ul>
-<li>Friday (09/12/2025)</li>
+<li>Friday (09/19/2025)</li>
 <li>12:10pm - 2:50pm</li>
-<li>Academic Entrance 63 Fifth Ave | Room # 601</li>
+<li>Academic Entrance 63 Fifth Ave | Room # 601 (UL107 as replacement)</li>
 </ul></li>
 </ul>
 <div class="callout-important callout callout-style-default callout-captioned">
@@ -110,7 +110,7 @@ Important
 </div>
 </div>
 <div class="callout-body-container callout-body">
-<p>important: As we know, the room for our class may still be in flux as was the case week #1 and week #2. Check in first at Room #601; we may migrate to L107 again. Come a bit early if possible. Also check Canvas Announcements prior to class on day-of class (09/12/2025)</p>
+<p>important: Class 4 will start at room L107 again. Come a bit early if possible. Also check Canvas Announcements prior to class on day-of class (09/19/2025).</p>
 </div>
 </div>
 </section>
@@ -121,8 +121,8 @@ Important
 <li><a href="mailto:mettss@newschool.edu">Email</a></li>
 </ul>
 </section>
-<section id="quiz-2---exploratory-data-analysis-eda" class="level2">
-<h2 class="anchored" data-anchor-id="quiz-2---exploratory-data-analysis-eda">Quiz 2 - Exploratory Data Analysis (EDA)</h2>
+<section id="quiz-3---us-decennial-census" class="level2">
+<h2 class="anchored" data-anchor-id="quiz-3---us-decennial-census">Quiz 3 - US Decennial Census</h2>
 <div class="callout-important callout callout-style-default callout-captioned">
 <div class="callout-header d-flex align-content-center">
 <div class="callout-icon-container">
@@ -136,7 +136,7 @@ Important
 <p>important: the quiz code needs to be entered into the quiz before it opens and begins in Canvas.</p>
 </div>
 </div>
-<p>Code = <strong>aG&amp;1</strong></p>
+<p>Code = <strong>zF$8</strong></p>
 </section>
 <section id="agenda-items" class="level2">
 <h2 class="anchored" data-anchor-id="agenda-items">Agenda Items</h2>
@@ -144,19 +144,20 @@ Important
 <h3 class="anchored" data-anchor-id="pm">12:10 - 12:30 pm</h3>
 <ul>
 <li>Attendance</li>
-<li>Review of <a href="https://weekly-submissions.s3.us-east-1.amazonaws.com/c2_pgud5160_submissions.pdf">Class 2 Submissions</a></li>
+<li>Review of <a href="https://weekly-submissions.s3.us-east-1.amazonaws.com/c3_pgud5160_submissions.pdf">Class 3 Submissions</a></li>
 </ul>
 </section>
 <section id="pm-1" class="level3">
 <h3 class="anchored" data-anchor-id="pm-1">12:30 - 2:15 pm</h3>
 <ul>
-<li>Conduct <a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/assignments-labs/c3_lab">Class 3 Lab</a>
+<li>Conduct <a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/assignments-labs/c4_lab">Class 4 Lab</a>
 <ul>
 <li>Topics:
 <ul>
-<li>Installing and Loading Packages in R</li>
-<li>Census API Keys</li>
-<li>Download and explore US Census Decennial Data</li>
+<li>EDA for American Community Survey (ACS)</li>
+<li>ACS - Small Area Units (Census Block Groups in Study Area)</li>
+<li>ACS - Time Series Analysis ( Poverty Rate + Rent Burden)</li>
+<li>ACS - Comparison Charts (Poverty Rate + Rent Burden)</li>
 </ul></li>
 </ul></li>
 </ul>
@@ -164,7 +165,12 @@ Important
 <section id="pm-2" class="level3">
 <h3 class="anchored" data-anchor-id="pm-2">2:15 - 2:40 pm</h3>
 <ul>
-<li>Introduction &amp; Discussion of <a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/assignments-labs/c3_assignment">Class 3 Assignment</a></li>
+<li>Introduction &amp; Discussion of <a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/assignments-labs/c4_assignment">Class 4 Assignment</a></li>
+<li>Topics:
+<ul>
+<li>ACS - Time Series Analysis ( Poverty Rate + Rent Burden)</li>
+<li>ACS - Comparison Charts (Poverty Rate + Rent Burden)</li>
+</ul></li>
 </ul>
 </section>
 <section id="pm-3" class="level3">
@@ -174,25 +180,33 @@ Important
 </ul>
 </section>
 </section>
-<section id="week-2-class-2-task-list" class="level2">
-<h2 class="anchored" data-anchor-id="week-2-class-2-task-list">Week 2 Class 2 Task List</h2>
+<section id="week-4-class-4-task-list" class="level2">
+<h2 class="anchored" data-anchor-id="week-4-class-4-task-list">Week 4 Class 4 Task List</h2>
 <ol type="1">
-<li>Attend Week 3 Class 3 Weekly Class Meeting (09/12/25).</li>
-<li>Review posted materials for Class 3 Meeting.</li>
-<li>Take Quiz 2, best prior to start of Class 3 at 12:10 pm.</li>
-<li>Conduct <a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/assignments-labs/c3_lab">Lab 3</a></li>
-<li>Become oriented to <a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/assignments-labs/c3_assignment">Assignment 3</a></li>
+<li>Attend Week 4 Class 4 Weekly Class Meeting (09/19/25).</li>
+<li>Review posted materials for Class 4 Meeting.</li>
+<li>Take Quiz 3, best prior to start of Class 4 at 12:10 pm.</li>
+<li>Conduct <a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/assignments-labs/c4_lab">Lab 4</a></li>
+<li>Become oriented to <a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/assignments-labs/c4_assignment">Assignment 4</a></li>
 </ol>
 </section>
-<section id="week-3-class-3-orientation-items" class="level2">
-<h2 class="anchored" data-anchor-id="week-3-class-3-orientation-items">Week 3 Class 3 Orientation Items</h2>
+<section id="week-4-class-4-orientation-items" class="level2">
+<h2 class="anchored" data-anchor-id="week-4-class-4-orientation-items">Week 4 Class 4 Orientation Items</h2>
 <ul>
-<li><a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/agendas/c3_agenda">Class 3 Agenda</a></li>
-<li><a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/assignments-labs/c3_lab">Class 3 lab</a></li>
-<li><a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/assignments-labs/c3_assignment">Class 3 Assignment</a></li>
-<li><a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/lecture-slides/lecture.3/index.html">Class 3 Lecture Slides</a></li>
-<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c3_lab3-script.R">Class 3 lab script</a></li>
-<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/assignment_3.Rmd">Class 3 assignment R Markdown ‘Starter’ File</a></li>
+<li><a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/agendas/c4_agenda">Class 4 Agenda</a></li>
+<li><a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/assignments-labs/c4_lab">Class 4 lab</a></li>
+<li><a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/assignments-labs/c4_assignment">Class 4 Assignment</a></li>
+<li><a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/lecture-slides/lecture.4/index.html">Class 4 Lecture Slides</a></li>
+<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/assignment_4.Rmd">Class 4 assignment R Markdown ‘Starter’ File</a></li>
+<li><a href="https://weekly-materials.s3.us-west-1.amazonaws.com/2020_Census_Tracts_to_2020_NTAs_and_CDTAs_Equivalency_20250903.csv.zip">Class 4 2020 census tracts to NTA + CDTA Equivalency CSV table (compressed)</a></li>
+<li><a href="https://weekly-materials.s3.us-west-1.amazonaws.com/nhgis_tr2010_tr2020_36.csv.zip">Class 4 NHGIS 2010 census tracts to 2020 census tracts crosswalk table (compressed)</a></li>
+<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c4_lab4-script-1.R">Class 4 lab script 1 - ACS EDA</a></li>
+<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c4_lab4-script-2.R">Class 4 lab script 2 - CBG in Manhattan CD03</a></li>
+<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c4_lab4-script-3.R">Class 4 lab script 3 - Time Series Plotting - Poverty Rate</a></li>
+<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c4_lab4-script-4.R">Class 4 lab script 4 - Comparison Chart - Poverty Rate</a></li>
+<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c4_lab4-script-5.R">Class 4 lab script 5 - Time Series Plotting Rent Burden</a></li>
+<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c4_lab4-script-6.R">Class 4 lab script 6 - Comparison Chart - Poverty Rate</a></li>
+<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c4_assignment4-script.R">Class 4 assignment script - Time Series + Comparison Chart</a></li>
 </ul>
 </section>
 
@@ -349,5 +363,5 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
 
 
 
-<script src="c3_agenda_files/libs/quarto-html/zenscroll-min.js"></script>
+<script src="c4_agenda_files/libs/quarto-html/zenscroll-min.js"></script>
 </body></html>
