--- a/agendas/c4_agenda.html
+++ b/agendas/c4_agenda.html
@@ -205,8 +205,7 @@ Important
 <li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c4_lab4-script-3.R">Class 4 lab script 3 - Time Series Plotting - Poverty Rate</a></li>
 <li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c4_lab4-script-4.R">Class 4 lab script 4 - Comparison Chart - Poverty Rate</a></li>
 <li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c4_lab4-script-5.R">Class 4 lab script 5 - Time Series Plotting Rent Burden</a></li>
-<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c4_lab4-script-6.R">Class 4 lab script 6 - Comparison Chart - Poverty Rate</a></li>
-<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c4_assignment4-script.R">Class 4 assignment script - Time Series + Comparison Chart</a></li>
+<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c4_lab4-script-6.R">Class 4 lab script 6 - Comparison Chart - Rent Burden</a></li>
 </ul>
 </section>
 
