c4 assignment revision add

--- a/assignments-labs/c4_assignment.html
+++ b/assignments-labs/c4_assignment.html
@@ -356,7 +356,7 @@ Note
 <li>load the <em>settings</em> for the comparison plot and chart
 <ul>
 <li>for option 1, paste here <code>lines #14 - #36</code> from the Poverty Rate script.</li>
-<li>for option 2, paste here <code>lines #13 - #45</code> from the Rent Burden script</li>
+<li>for option 2, paste here <code>lines #13 - #50</code> from the Rent Burden script.</li>
 </ul></li>
 <li>Load the code listing for the comparison plot
 <ul>
