c4 agenda scripts path revision

--- a/agendas/c4_agenda.html
+++ b/agendas/c4_agenda.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="dcterms.date" content="2025-09-15">
+<meta name="dcterms.date" content="2025-09-17">
 
 <title>Week 4 | Class 4 Agenda</title>
 <style>
@@ -79,7 +79,7 @@ ul.task-list li input[type="checkbox"] {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">September 15, 2025</p>
+      <p class="date">September 17, 2025</p>
     </div>
   </div>
   
@@ -195,17 +195,18 @@ Important
 <ul>
 <li><a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/agendas/c4_agenda">Class 4 Agenda</a></li>
 <li><a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/assignments-labs/c4_lab">Class 4 lab</a></li>
+<li><a href="https://weekly-materials.s3.us-west-1.amazonaws.com/lab_4_backup-data.zip">Class 4 lab <code>.RData</code> Backup Files - use in case <code>tidycensus</code> pulls fail during lab</a></li>
 <li><a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/assignments-labs/c4_assignment">Class 4 Assignment</a></li>
 <li><a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/lecture-slides/lecture.4/index.html">Class 4 Lecture Slides</a></li>
 <li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/assignment_4.Rmd">Class 4 assignment R Markdown ‘Starter’ File</a></li>
 <li><a href="https://weekly-materials.s3.us-west-1.amazonaws.com/2020_Census_Tracts_to_2020_NTAs_and_CDTAs_Equivalency_20250903.csv.zip">Class 4 2020 census tracts to NTA + CDTA Equivalency CSV table (compressed)</a></li>
 <li><a href="https://weekly-materials.s3.us-west-1.amazonaws.com/nhgis_tr2010_tr2020_36.csv.zip">Class 4 NHGIS 2010 census tracts to 2020 census tracts crosswalk table (compressed)</a></li>
-<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c4_lab4-script-1.R">Class 4 lab script 1 - ACS EDA</a></li>
-<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c4_lab4-script-2.R">Class 4 lab script 2 - CBG in Manhattan CD03</a></li>
-<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c4_lab4-script-3.R">Class 4 lab script 3 - Time Series Plotting - Poverty Rate</a></li>
-<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c4_lab4-script-4.R">Class 4 lab script 4 - Comparison Chart - Poverty Rate</a></li>
-<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c4_lab4-script-5.R">Class 4 lab script 5 - Time Series Plotting Rent Burden</a></li>
-<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c4_lab4-script-6.R">Class 4 lab script 6 - Comparison Chart - Rent Burden</a></li>
+<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c4_lab4-script-1.r">Class 4 lab script 1 - ACS EDA</a></li>
+<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c4_lab4-script-2.r">Class 4 lab script 2 - CBG in Manhattan CD03</a></li>
+<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c4_lab4-script-3.r">Class 4 lab script 3 - Time Series Plotting - Poverty Rate</a></li>
+<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c4_lab4-script-4.r">Class 4 lab script 4 - Comparison Chart - Poverty Rate</a></li>
+<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c4-assignment4-script-1.r">Class 4 Assignment script - Option 1 - Poverty Rate</a></li>
+<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c4-assignment4-script-2.r">Class 4 Assignment script - Option 2 - Rent Burden</a></li>
 </ul>
 </section>
 
