--- a/agendas/c4_agenda.html
+++ b/agendas/c4_agenda.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="dcterms.date" content="2025-09-17">
+<meta name="dcterms.date" content="2025-09-18">
 
 <title>Week 4 | Class 4 Agenda</title>
 <style>
@@ -79,7 +79,7 @@ ul.task-list li input[type="checkbox"] {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">September 17, 2025</p>
+      <p class="date">September 18, 2025</p>
     </div>
   </div>
   
@@ -156,8 +156,9 @@ Important
 <ul>
 <li>EDA for American Community Survey (ACS)</li>
 <li>ACS - Small Area Units (Census Block Groups in Study Area)</li>
-<li>ACS - Time Series Analysis ( Poverty Rate + Rent Burden)</li>
-<li>ACS - Comparison Charts (Poverty Rate + Rent Burden)</li>
+<li>ACS - Comparison Plots (Poverty Rate + Rent Burden Examples)</li>
+<li>ACS - Comparison Charts (Poverty Rate + Rent Burden Examples)</li>
+<li>ACS - Time Series Analysis ( Poverty Rate + Rent Burden Examples)</li>
 </ul></li>
 </ul></li>
 </ul>
@@ -168,8 +169,8 @@ Important
 <li>Introduction &amp; Discussion of <a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/assignments-labs/c4_assignment">Class 4 Assignment</a></li>
 <li>Topics:
 <ul>
-<li>ACS - Time Series Analysis ( Poverty Rate + Rent Burden)</li>
-<li>ACS - Comparison Charts (Poverty Rate + Rent Burden)</li>
+<li>ACS - Comparison Plot ( Poverty Rate + Rent Burden Option 1 or Option 2)</li>
+<li>ACS - Comparison Chart (Poverty Rate + Rent Burden Option 1 or Option 2)</li>
 </ul></li>
 </ul>
 </section>
@@ -203,8 +204,8 @@ Important
 <li><a href="https://weekly-materials.s3.us-west-1.amazonaws.com/nhgis_tr2010_tr2020_36.csv.zip">Class 4 NHGIS 2010 census tracts to 2020 census tracts crosswalk table (compressed)</a></li>
 <li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c4_lab4-script-1.r">Class 4 lab script 1 - ACS EDA</a></li>
 <li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c4_lab4-script-2.r">Class 4 lab script 2 - CBG in Manhattan CD03</a></li>
-<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c4_lab4-script-3.r">Class 4 lab script 3 - Time Series Plotting - Poverty Rate</a></li>
-<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c4_lab4-script-4.r">Class 4 lab script 4 - Comparison Chart - Poverty Rate</a></li>
+<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c4-lab4-script-3.r">Class 4 lab script 3 - Time Series Plotting - Poverty Rate</a></li>
+<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c4-lab4-script-4.r">Class 4 lab script 4 - Comparison Chart - Poverty Rate</a></li>
 <li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c4-assignment4-script-1.r">Class 4 Assignment script - Option 1 - Poverty Rate</a></li>
 <li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c4-assignment4-script-2.r">Class 4 Assignment script - Option 2 - Rent Burden</a></li>
 </ul>
